--- a/jogodavelha/app/src/main/res/layout/activity_main2.xml
+++ b/jogodavelha/app/src/main/res/layout/activity_main2.xml
@@ -36,24 +36,23 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="366dp"
-        android:layout_height="305dp"
+        android:layout_width="421dp"
+        android:layout_height="371dp"
         android:layout_margin="16dp"
         android:background="@drawable/border"
         android:stretchColumns="*"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/reiniciar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/status"
-        app:layout_constraintVertical_bias="0.385">
+        app:layout_constraintVertical_bias="0.0">
 
         <TableRow android:gravity="center">
 
             <Button
                 android:id="@+id/button1"
                 style="@style/TicTacToeButton"
-                android:layout_width="40pt"
+                android:layout_width="25pt"
                 android:layout_height="40pt"
                 android:onClick="btClick"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -61,7 +60,7 @@
             <Button
                 android:id="@+id/button2"
                 style="@style/TicTacToeButton"
-                android:layout_width="40pt"
+                android:layout_width="25pt"
                 android:layout_height="40pt"
                 android:onClick="btClick"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -69,7 +68,7 @@
             <Button
                 android:id="@+id/button3"
                 style="@style/TicTacToeButton"
-                android:layout_width="40pt"
+                android:layout_width="25pt"
                 android:layout_height="40pt"
                 android:onClick="btClick"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -81,7 +80,7 @@
             <Button
                 android:id="@+id/button4"
                 style="@style/TicTacToeButton"
-                android:layout_width="40pt"
+                android:layout_width="25pt"
                 android:layout_height="40pt"
                 android:onClick="btClick"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -89,7 +88,7 @@
             <Button
                 android:id="@+id/button5"
                 style="@style/TicTacToeButton"
-                android:layout_width="40pt"
+                android:layout_width="25pt"
                 android:layout_height="40pt"
                 android:onClick="btClick"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -97,7 +96,7 @@
             <Button
                 android:id="@+id/button6"
                 style="@style/TicTacToeButton"
-                android:layout_width="40pt"
+                android:layout_width="25pt"
                 android:layout_height="40pt"
                 android:onClick="btClick"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -109,7 +108,7 @@
             <Button
                 android:id="@+id/button7"
                 style="@style/TicTacToeButton"
-                android:layout_width="40pt"
+                android:layout_width="25pt"
                 android:layout_height="40pt"
                 android:onClick="btClick"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -117,7 +116,7 @@
             <Button
                 android:id="@+id/button8"
                 style="@style/TicTacToeButton"
-                android:layout_width="40pt"
+                android:layout_width="25pt"
                 android:layout_height="40pt"
                 android:onClick="btClick"
                 tools:ignore="SpeakableTextPresentCheck" />
@@ -125,10 +124,20 @@
             <Button
                 android:id="@+id/button9"
                 style="@style/TicTacToeButton"
-                android:layout_width="40pt"
+                android:layout_width="25pt"
                 android:layout_height="40pt"
                 android:onClick="btClick"
                 tools:ignore="SpeakableTextPresentCheck" />
         </TableRow>
     </TableLayout>
+
+    <Button
+        android:id="@+id/reiniciar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="36dp"
+        android:text="Reiniciar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
